--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "express-xml-bodyparser": "^0.3.0",
     "jade": "~1.9.2",
     "log4js": "^0.6.38",
     "morgan": "~1.5.3",
+    "object-to-xml": "^1.1.0",
     "serve-favicon": "~2.2.1"
   }
 }
