--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "config": "^1.21.0",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
+    "elasticsearch": "^11.0.1",
     "express": "~4.12.4",
     "express-xml-bodyparser": "^0.3.0",
     "jade": "~1.9.2",
