--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "~1.5.3",
     "mysql": "^2.11.1",
     "object-to-xml": "^1.1.0",
+    "sequence": "^3.0.0",
     "serve-favicon": "~2.2.1"
   }
 }
